--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,13 +7,13 @@
         android:title="@string/bottom_nav_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_guide"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/bottom_nav_more" />
+        android:title="@string/bottom_nav_guide" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_project"
         android:icon="@drawable/ic_person_black_24dp"
-        android:title="@string/bottom_nav_person" />
+        android:title="@string/bottom_nav_project" />
 
 </menu>
