--- a/app/src/main/res/layout/main_activity_container.xml
+++ b/app/src/main/res/layout/main_activity_container.xml
@@ -2,6 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fl_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MergeRootFrame">
 
 </FrameLayout>
