--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -19,14 +19,5 @@
         <include layout="@layout/main_activity_bottom_nav"/>
 
     </android.support.design.widget.CoordinatorLayout>
-    <android.support.design.widget.NavigationView
-        android:id="@+id/main_left_nav"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        android:clickable="true"
-        android:focusable="true">
-
-    </android.support.design.widget.NavigationView>
+    <include layout="@layout/main_activity_left_nav"/>
 </android.support.v4.widget.DrawerLayout>
