--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,12 +7,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycle_home_frag"
+        <com.lazylee.lzywanandroid.view.AppbarRefreshLayout
+            android:id="@+id/refresh_home_frag"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycle_home_frag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.RecyclerView>
+        </com.lazylee.lzywanandroid.view.AppbarRefreshLayout>
     </RelativeLayout>
     <include layout="@layout/state_layout" />
 </FrameLayout>
