--- a/app/src/main/res/layout/main_activity_left_nav.xml
+++ b/app/src/main/res/layout/main_activity_left_nav.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_left_nav"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:fitsSystemWindows="true"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    app:headerLayout="@layout/drawer_nav_header"
+    app:menu="@menu/drawer_nav_menu">
 
 </android.support.design.widget.NavigationView>
