--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,12 @@
 
     <color name="colorRipple">#D8D9DA</color>
 
+    <!-- Colors related to LzyChip -->
+    <color name="colorChipBackground">#e0e0e0</color>
+    <color name="colorChipBackgroundClicked">#424242</color>
+    <color name="colorChipText">#616161</color>
+    <color name="colorChipTextClicked">#F5F5F5</color>
+
 
     <!--    material colors     -->
     <!--    Amber   琥珀色     -->
