change Toast: add error and warming type message

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorWhiteB">#F5F5F5</color>
-    <color name="colorNewPrimary">#03A9F4</color>
-    <color name="colorNewPrimaryDark">#039BE5</color>
+    <color name="colorNewPrimary">@color/material_light_blue_500</color>
+    <color name="colorNewPrimaryDark">@color/material_light_blue_600</color>
     <color name="colorNewAccent">@color/material_grey_400</color>
     <color name="colorTextTitle">#222222</color>
     <color name="colorTextCaptain">#999999</color>
