--- a/app/src/main/res/layout/toast_layout_alert.xml
+++ b/app/src/main/res/layout/toast_layout_alert.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/toast_container_bg">
+    android:orientation="horizontal"
+    android:background="@drawable/toast_alert_bg">
+
+    <ImageView
+        android:id="@+id/toast_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="4dp"
+        android:scaleType="fitCenter"
+        android:layout_marginLeft="4dp" />
     <TextView
         android:id="@+id/toast_text"
         android:layout_width="wrap_content"
@@ -17,6 +26,5 @@
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         app:fontFamily="sans-serif-condensed"
-        android:textColor="#FFFFFF"
-        />
+        android:textColor="#FFFFFF" />
 </LinearLayout>
