--- a/app/src/main/res/layout/recycle_hotkey_item.xml
+++ b/app/src/main/res/layout/recycle_hotkey_item.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.lazylee.lzywanandroid.view.LzyChip xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/hot_key_chip"
+<com.google.android.material.chip.Chip
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.MaterialComponents.Chip.Choice"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    >
-
-</com.lazylee.lzywanandroid.view.LzyChip>
+    android:layout_height="wrap_content"/>
