--- a/app/src/main/res/layout/recycle_hotkey_item.xml
+++ b/app/src/main/res/layout/recycle_hotkey_item.xml
@@ -2,5 +2,6 @@
 <com.google.android.material.chip.Chip
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Widget.MaterialComponents.Chip.Choice"
+    android:id="@+id/hot_key_chip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
