--- a/app/src/main/res/layout/recycle_search_history.xml
+++ b/app/src/main/res/layout/recycle_search_history.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_padding"
+    android:paddingRight="@dimen/activity_horizontal_padding"
     android:orientation="horizontal">
     <androidx.appcompat.widget.AppCompatImageView
         android:padding="@dimen/activity_vertical_padding"
@@ -11,9 +13,17 @@
         app:srcCompat="@drawable/ic_history_grey_24dp"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/search_history_item_key"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:textSize="18sp"
         android:gravity="center"
-        android:layout_height="match_parent"
-        android:hint="@string/app_name"/>
+        android:layout_height="match_parent" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/search_history_item_date"
+        android:layout_width="wrap_content"
+        android:padding="10dp"
+        android:textSize="12sp"
+        android:gravity="end|center_vertical"
+        android:layout_height="match_parent" />
 </LinearLayout>
