--- a/app/src/main/res/layout/main_activity_appbar.xml
+++ b/app/src/main/res/layout/main_activity_appbar.xml
@@ -9,6 +9,5 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        app:layout_scrollFlags="scroll|enterAlways"
-        />
+        app:layout_scrollFlags="scroll|enterAlways" />
 </com.google.android.material.appbar.AppBarLayout>
