--- a/app/src/main/res/drawable/ic_error_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_error_white_24dp.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-2h2v2zM13,13h-2L11,7h2v6z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <path
+      android:pathData="M874.04,783.53 L602.51,512l271.53,-271.53c24.99,-24.99 24.99,-65.52 0,-90.51 -24.99,-24.99 -65.52,-24.99 -90.51,0L512,421.49 240.47,149.96c-24.99,-24.99 -65.52,-24.99 -90.51,0s-24.99,65.52 0,90.51L421.49,512 149.96,783.53c-24.99,24.99 -24.99,65.52 0,90.51 24.99,24.99 65.52,24.99 90.51,0L512,602.51l271.53,271.53c24.99,24.99 65.52,24.99 90.51,0C899.03,849.04 899.03,808.52 874.04,783.53z"
+      android:fillColor="#ffffff"/>
 </vector>
