--- a/app/src/main/res/layout/project_viewpager_fragment.xml
+++ b/app/src/main/res/layout/project_viewpager_fragment.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".activity.main.project.fragment.ProjectVPFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:textSize="24sp" />
 
 </FrameLayout>
