--- a/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/app/src/main/res/menu/main_toolbar_menu.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="AppCompatResource">
     <item
         android:id="@+id/menu_toolbar_history"
         android:icon="@drawable/ic_history_white_24dp"
         android:title="@string/toolbar_history"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+         />
     <item
         android:id="@+id/menu_toolbar_search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/toolbar_search"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />
 </menu>
