--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_drawer"
@@ -8,16 +8,18 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_cl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/main_activity_appbar"/>
 
-        <include layout="@layout/main_activity_container"/>
+        <include layout="@layout/main_activity_appbar" />
 
-        <include layout="@layout/main_activity_bottom_nav"/>
+        <include layout="@layout/main_activity_container" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    <include layout="@layout/main_activity_left_nav"/>
-</androidx.drawerlayout.widget.DrawerLayout>
+        <include layout="@layout/main_activity_bottom_nav" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <include layout="@layout/main_activity_left_nav" />
+</android.support.v4.widget.DrawerLayout>
