--- a/app/src/main/res/layout/main_activity_left_nav.xml
+++ b/app/src/main/res/layout/main_activity_left_nav.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_left_nav"
@@ -11,4 +11,4 @@
     app:headerLayout="@layout/drawer_nav_header"
     app:menu="@menu/drawer_nav_menu">
 
-</com.google.android.material.navigation.NavigationView>
+</android.support.design.widget.NavigationView>
