--- a/app/src/main/res/layout/recycle_search_history.xml
+++ b/app/src/main/res/layout/recycle_search_history.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_padding"
-    android:paddingRight="@dimen/activity_horizontal_padding"
-    android:orientation="horizontal">
-    <androidx.appcompat.widget.AppCompatImageView
-        android:padding="@dimen/activity_vertical_padding"
+    android:paddingRight="@dimen/activity_horizontal_padding">
+
+    <android.support.v7.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_history_grey_24dp"
-        />
-    <androidx.appcompat.widget.AppCompatTextView
+        android:padding="@dimen/activity_vertical_padding"
+        app:srcCompat="@drawable/ic_history_grey_24dp" />
+
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/search_history_item_key"
         android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="18sp"
         android:gravity="center"
-        android:layout_height="match_parent" />
-    <androidx.appcompat.widget.AppCompatTextView
+        android:textSize="18sp" />
+
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/search_history_item_date"
         android:layout_width="wrap_content"
-        android:padding="10dp"
-        android:textSize="12sp"
+        android:layout_height="match_parent"
         android:gravity="end|center_vertical"
-        android:layout_height="match_parent" />
+        android:padding="10dp"
+        android:textSize="12sp" />
 </LinearLayout>
