--- a/app/src/main/res/layout/enter_activity.xml
+++ b/app/src/main/res/layout/enter_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lazylee.lzywanandroid.activity.enter.EnterActivity">
+    tools:context=".ui.activity.enter.EnterActivity">
 
     <TextView
         android:layout_width="wrap_content"
