--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.lazylee.lzywanandroid.view.AppbarRefreshLayout
+        <com.lazylee.lzywanandroid.ui.view.AppbarRefreshLayout
             android:id="@+id/refresh_home_frag"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -17,7 +17,7 @@
                 android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
-        </com.lazylee.lzywanandroid.view.AppbarRefreshLayout>
+        </com.lazylee.lzywanandroid.ui.view.AppbarRefreshLayout>
     </RelativeLayout>
     <include layout="@layout/state_layout" />
 </FrameLayout>
