--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lazylee.lzywanandroid.activity.register.RegisterActivity">
+    tools:context=".ui.activity.register.RegisterActivity">
 
     <ProgressBar
         android:id="@+id/register_prgress"
