--- a/app/src/main/res/layout/web_activity.xml
+++ b/app/src/main/res/layout/web_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.web.WebActivity">
+    tools:context=".ui.activity.web.WebActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
